--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<button><a href="myself.html"> B A C K</a> </button>
+	<button><a href="index.html"> B A C K</a> </button>
 	<strong><h1 style="font-style: inherit; color: white;"> A B O U T   M E</h1></strong>
 	<center>
 <div class="mk">
