--- a/achieve.html
+++ b/achieve.html
@@ -74,7 +74,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<button><a href="myself.html"> B A C K</a></button>
+	<button><a href="index.html"> B A C K</a></button>
 
 	<center><strong><h1 style="text-align: left; font-style: inherit; color: white;"> A C H I E V E M E N T S </h1></strong>
 <div>
