--- a/skills.html
+++ b/skills.html
@@ -101,7 +101,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<button><a href="myself.html" style="text-decoration: none;"> B A C K</a> </button>
+<button><a href="index.html" style="text-decoration: none;"> B A C K</a> </button>
 	<strong><h1 style="font-style: inherit; color: white;"> S K I L L S  </h1></strong>
 	
 <div style="justify-content: flex-start;">
