--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@ button
   <div style="font-style: inherit; color: white;">
     <h1> T H A N K   Y O U </h1>
   </div>
-  <button><a href="myself.html"> B A C K</a></button>
+  <button><a href="index.html"> B A C K</a></button>
 
   
 </body>
